# kdiff

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bash/: kdiff_completion.bash
include/kdiff/: Config.hpp  Difference.hpp  Parser.hpp  ParserException.hpp
include/kdiff/_detail/: IDiffStategy.hpp
include/kdiff/_detail/algorithm/: BaseDiff.hpp
include/kdiff/_detail/algorithm/base/: BaseDiffDecorator.hpp
include/kdiff/algorithm/: IDiffStategy.hpp
include/kdiff/algorithm/line/: Mayer.hpp
include/kdiff/differ/: IDiffer.hpp  LineDiffer.hpp  LineDifferFactory.hpp
include/kdiff/differ/line/: CaseSensitiveDecorator.hpp  IgnoringSymbolDecorator.hpp  LineDifferDecorator.hpp  RangeDecorator.hpp  RangeException.hpp
include/kdiff/ui/: DiffRender.hpp  RenderException.hpp
src/kdiff/: Config.cpp  Difference.cpp  Parser.cpp  ParserException.cpp
src/kdiff/_detail/algorithm/: BaseDiff.cpp
src/kdiff/algorithm/line/: Mayer.cpp
src/kdiff/differ/: LineDiffer.cpp  LineDifferFactory.cpp
src/kdiff/differ/line/: CaseSensitiveDecorator.cpp  IgnoringSymbolDecorator.cpp  LineDifferDecorator.cpp  RangeDecorator.cpp  RangeException.cpp
src/kdiff/ui/: DiffRender.cpp  RenderException.cpp
test/: CMakeLists.txt  MayerTest.cpp  ParserTest.cpp
